--- a/css/app.css
+++ b/css/app.css
@@ -47,3 +47,24 @@ ul {
 li {
     margin-bottom: 10px;
 }
+.navbar {
+    margin-bottom: 20px;
+    border-radius: 0;
+}
+.navbar-brand {
+    font-weight: bold;
+    color: #333 !important;
+}
+.navbar-nav > li > a {
+    color: #333 !important;
+}
+.navbar-nav > li.active > a {
+    background-color: #e7e7e7 !important;
+    color: #337ab7 !important;
+}
+.navbar-toggle {
+    border-color: #333;
+}
+.navbar-toggle .icon-bar {
+    background-color: #333;
+}
