--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    background-color: #a3dbc6;
+    background-color: #bce0d3;
 }
 .container {
     max-width: 960px;
@@ -34,7 +34,7 @@ img {
     transform: scale(1.05);
 }
 a {
-    color: #337ab7;
+    color: #293c38;
     text-decoration: none;
 }
 a:hover {
