--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    background-color: #bce0d3;
+    background-color: #d9f6eb;
 }
 .container {
     max-width: 960px;
